navbar done, and starting doing the review on the background hero image

--- a/index.html
+++ b/index.html
@@ -13,12 +13,25 @@
 </head>
 
 <body>
-	<div class="row">
-        <div class="col-9">IndiBurgers</div>
-        <div class="col-1">Menu</div>
-        <div class="col-1">Contact</div>
-        <div class="col-1">Reservation</div>
-    </div>
+	<nav class="navbar navbar-expand-sm fixed-top">
+		<div class="navbar-brand" href="#">INDI<span class="burgers">Burgers</span></div>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<div class="navbar-nav ml-auto">
+				<a class="nav-item nav-link" href="#">Menu</a>
+				<a class="nav-item nav-link" href="#">Contact</a>
+				<a class="nav-item nav-link" href="#">Reservation</a>
+			</div>
+		</div>
+	</nav>
+	<section>
+		<div id="background-image"></div>
+	</section>
+	<section class="about-section">
+
+	</section>
 </body>
 
 </html>
