first draft of into page, and starting to work on about section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<nav class="navbar navbar-expand-sm fixed-top">
 		<div class="navbar-brand" href="#">INDI<span class="burgers">Burgers</span></div>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 		<div class="collapse navbar-collapse" id="navbarNav">
@@ -27,10 +27,23 @@
 		</div>
 	</nav>
 	<section>
-		<div id="background-image"></div>
+		<div id="main-image">
+			<div id="background-image"></div>
+			<div id="cover-text">
+				<div class="star-rating">
+					<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
+				</div>
+				<h5 class="best-place">“Best place in Town!”</h5>
+				<p class="review-text">The burgers and view of the city are unmatchable anywhere else!<p>
+						<button type="button" class="btn btn-outline-warning">Book a Table</button>
+			</div>
+		</div>
 	</section>
-	<section class="about-section">
-
+	<div class="spacer"></div>
+	<section>
+		<div id="about-section">
+			<div id="about-image"></div>
+		</div>
 	</section>
 </body>
 
