added arrow at bottom of main-image to let views know theres more

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 			</div>
 		</div>
 	</section>
-	<div class="spacer"></div>
+	<div class="spacer">
+        <i class="fas fa-arrow-circle-down"></i>
+    </div>
 	<section>
 		<div id="about-section">
 			<div id="about-image"></div>
