--- a/index.html
+++ b/index.html
@@ -34,17 +34,37 @@
 					<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
 				</div>
 				<h5 class="best-place">“Best place in Town!”</h5>
-				<p class="review-text">The burgers and view of the city are unmatchable anywhere else!<p>
-						<button type="button" class="btn btn-outline-warning">Book a Table</button>
+				<p class="review-text">The burgers and the view of the city are unmatchable anywhere else!<p>
+						<button type="button" class="btn btn-outline-warning" href="reservation">Book a Table</button>
 			</div>
 		</div>
 	</section>
 	<div class="spacer">
-        <i class="fas fa-arrow-circle-down"></i>
-    </div>
+		<i class="fas fa-arrow-circle-down"></i>
+	</div>
 	<section>
 		<div id="about-section">
 			<div id="about-image"></div>
+			<div id="about-box-1">
+				<h5 class="about-header">Who</h5>
+				<p class="about-text">Indi Burgers was founded in January 2020 by Mauro Indigne, member of the
+					IndiBirghi & Co. group created in 1970.<p>
+			</div>
+			<div id="about-box-2">
+				<h5 class="about-header">Unique</h5>
+				<p class="about-text">Our customers are able to enjoy a delicious meal with a beautiful view on
+					downtown Bangkok on its balcony and live band playing every Friday night.<p>
+			</div>
+			<div id="about-box-3">
+				<h5 class="about-header">Quality</h5>
+				<p class="about-text">Indi Burgers provides customers with the highest quality of meat and daily fresh
+					products from local farms.<p>
+			</div>
+			<div id="about-box-4">
+				<h5 class="about-header">Where are we located?</h5>
+				<p class="about-text">Indi Burgers is located in Bangkok, Thailand, the capital of good and high-quality
+					foods. Address: Pullman Hotel, Silom, 28th Floor<p>
+			</div>
 		</div>
 	</section>
 </body>
