main image and about section working in full browser size, but not fully in mobile

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+<!-- Navbar comes from bootstrap, but with custom css for colors -->
 	<nav class="navbar navbar-expand-sm fixed-top">
 		<div class="navbar-brand" href="#">INDI<span class="burgers">Burgers</span></div>
 		<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,24 +31,28 @@
 		<div id="main-image">
 			<div id="background-image"></div>
 			<div id="cover-text">
+				<!-- fontawesome stars used to show the reveiws from people -->
 				<div class="star-rating">
 					<i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half-alt"></i>
 				</div>
 				<h5 class="best-place">“Best place in Town!”</h5>
 				<p class="review-text">The burgers and the view of the city are unmatchable anywhere else!<p>
-						<button type="button" class="btn btn-outline-warning" href="reservation">Book a Table</button>
+                                <!-- link for this button still needs to be added -->
+						<button type="button" class="btn btn-outline-warning" href="#">Book a Table</button>
+			</div>
+			<!-- Arrow is used to let the users know theres more to see -->
+			<div class="arrow-1">
+				<i class="fas fa-arrow-circle-down"></i>
 			</div>
 		</div>
 	</section>
-	<div class="spacer">
-		<i class="fas fa-arrow-circle-down"></i>
-	</div>
 	<section>
 		<div id="about-section">
 			<div id="about-image"></div>
+			<!-- A shortened style of Who, What, Where is located here -->
 			<div id="about-box-1">
 				<h5 class="about-header">Who</h5>
-				<p class="about-text">Indi Burgers was founded in January 2020 by Mauro Indigne, member of the
+				<p class="about-text">INDIBurgers was founded in January 2020 by Mauro Indigne, member of the
 					IndiBirghi & Co. group created in 1970.<p>
 			</div>
 			<div id="about-box-2">
@@ -57,12 +62,12 @@
 			</div>
 			<div id="about-box-3">
 				<h5 class="about-header">Quality</h5>
-				<p class="about-text">Indi Burgers provides customers with the highest quality of meat and daily fresh
+				<p class="about-text">INDIBurgers provides customers with the highest quality of meat and daily fresh
 					products from local farms.<p>
 			</div>
 			<div id="about-box-4">
-				<h5 class="about-header">Where are we located?</h5>
-				<p class="about-text">Indi Burgers is located in Bangkok, Thailand, the capital of good and high-quality
+				<h5 class="about-header">Location?</h5>
+				<p class="about-text">INDIBurgers is located in Bangkok, Thailand, the capital of good and high-quality
 					foods. Address: Pullman Hotel, Silom, 28th Floor<p>
 			</div>
 		</div>
