--- a/index.html
+++ b/index.html
@@ -92,6 +92,39 @@
 				</div>
 			</div>
 	</section>
+	<section>
+		<div class="reservation-section">
+			<div id="reservation-image"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-7 offset-md-1 booking">
+						<form>
+							<div class="form-group">
+								<label for="booking-name">Booking Name</label>
+								<input type="text" class="form-control" id="booking-name" placeholder="Full name" aria-describedby="emailHelp">
+							</div>
+							<div class="form-group">
+								<label for="email">Email</label>
+								<input type="email" class="form-control" placeholder="Email" id="email">
+                            </div>
+							<div class="form-group form-check">
+									<input type="checkbox" class="form-check-input" id="exampleCheck1">
+									<label class="form-check-label" for="exampleCheck1">Check me out</label>
+							</div>
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</form>
+					</div>
+				</div>s
+			</div>
+		</div>
+	</section>
+	<footer>
+		</br>
+		</br>
+		</br>
+		</br>
+
+	</footer>
 </body>
 
 
