added css to reservation form, adjusted form for mobile version

--- a/index.html
+++ b/index.html
@@ -100,18 +100,22 @@
 					<div class="col-md-7 offset-md-1 booking">
 						<form>
 							<div class="form-group">
-								<label for="booking-name">Booking Name</label>
-								<input type="text" class="form-control" id="booking-name" placeholder="Full name" aria-describedby="emailHelp">
+                                <label for="booking-name">Name</label>
+								<input type="text" class="form-control" id="booking-name" placeholder="Name" aria-describedby="emailHelp" required>
 							</div>
 							<div class="form-group">
-								<label for="email">Email</label>
+                                <label for="email">Email Address</label>
 								<input type="email" class="form-control" placeholder="Email" id="email">
                             </div>
-							<div class="form-group form-check">
-									<input type="checkbox" class="form-check-input" id="exampleCheck1">
-									<label class="form-check-label" for="exampleCheck1">Check me out</label>
-							</div>
-							<button type="submit" class="btn btn-primary">Submit</button>
+                            <div class="form-group">
+                                <label for="">Phone Number</label>
+								<input type="text" class="form-control" placeholder="Phone" id="phone" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="date">Date for Reservation</label>
+								<input type="text" class="form-control" placeholder="dd/mm/yyyy" id="date">
+                            </div>
+							<button type="submit" class="btn btn-outline">Reserve a Table</button>
 						</form>
 					</div>
 				</div>s
