added hyperlink to arrow down on main page

--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 					</div>
 				</div>
 				<!-- Arrow is used to let the users know theres more to see -->
-				<div class="arrow-1 col-md-1 offset-md-4">
-					<i class="fas fa-arrow-circle-down"></i>
+				<div>
+					<a class="arrow-1 col-md-1 offset-md-4" href="#about-section">
+						<i class="fas fa-arrow-circle-down"></i>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -123,7 +125,7 @@
 		</div>
 	</section>
 	<footer>
-	
+
 	</footer>
 </body>
 
