creating footer layout for mobile and desktop start

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	<!-- Navbar comes from bootstrap, but with custom css for colors -->
+	<!-- Navbar comes from bootstrap, changed the layout of the html and CSS to fit my desired look -->
 	<nav class="navbar navbar-expand-sm fixed-top">
 		<div class="navbar-brand">INDI<span class="burgers">Burgers</span></div>
 		<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -125,7 +125,29 @@
 		</div>
 	</section>
 	<footer>
-
+		<div class="container">
+			<div class="row">
+				<div class="col-md-5">
+					<h3 class="footer-title">Address</h3>
+					<p class="location-info">
+						Bangkok, Thailand
+						188 Si Lom, Suriya Wong, Bang Rak,
+						Bangkok 10500, Pullman Hotel, Silom, 28th Floor
+					</p>
+				</div>
+                <div class="col-md-1 offset-md-1 info-devider">
+					
+				</div>
+				<div class="col-md-5">
+					<h3 class="footer-title">Address</h3>
+					<p class="location-info">
+						Bangkok, Thailand
+						188 Si Lom, Suriya Wong, Bang Rak,
+						Bangkok 10500, Pullman Hotel, Silom, 28th Floor
+					</p>
+				</div>
+			</div>
+		</div>
 	</footer>
 </body>
 
