--- a/index.html
+++ b/index.html
@@ -129,21 +129,24 @@
 			<div class="row">
 				<div class="col-md-5">
 					<h3 class="footer-title">Address</h3>
-					<p class="location-info">
+					<p class="footer-info">
 						Bangkok, Thailand
-						188 Si Lom, Suriya Wong, Bang Rak,
-						Bangkok 10500, Pullman Hotel, Silom, 28th Floor
+						188 Si Lom, Suriya Wong,
+						</br>
+						Bang Rak, 10500, Pullman Hotel,
+						</br>
+						Silom, 28th Floor
 					</p>
 				</div>
-                <div class="col-md-1 offset-md-1 info-devider">
-					
+				<div class="col-md-1 offset-md-1 info-devider">
+
 				</div>
 				<div class="col-md-5">
-					<h3 class="footer-title">Address</h3>
-					<p class="location-info">
-						Bangkok, Thailand
-						188 Si Lom, Suriya Wong, Bang Rak,
-						Bangkok 10500, Pullman Hotel, Silom, 28th Floor
+					<h3 class="footer-title">Contact Us</h3>
+					<p class="footer-info">
+						<i class="fas fa-phone"></i> +66 (0) 84 759 2658
+						</br>
+						<i class="fas fa-envelope"></i> Contact@indiburger.co.th
 					</p>
 				</div>
 			</div>
