footer in 2 sections before change to 3 sections

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<div class="navbar-nav ml-auto">
 				<a class="nav-item nav-link" href="#r">Menu</a>
-				<a class="nav-item nav-link" href="#">Contact</a>
+				<a class="nav-item nav-link" href="#contact-section">Contact</a>
 				<a class="nav-item nav-link" href="#reservation-section">Reservation</a>
 			</div>
 		</div>
@@ -108,15 +108,15 @@
 								<div class="form-group">
 									<label for="email">Email Address</label>
 									<input type="email" class="form-control" placeholder="Email" id="email">
-                            </div>
+                                </div>
 									<div class="form-group">
 										<label for="">Phone Number</label>
 										<input type="text" class="form-control" placeholder="Phone" id="phone" required>
-                            </div>
+                                </div>
 										<div class="form-group">
 											<label for="date">Date for Reservation</label>
 											<input type="text" class="form-control" placeholder="dd/mm/yyyy" id="date">
-                            </div>
+                                    </div>
 											<button type="submit" class="btn btn-outline">Reserve a Table</button>
 						</form>
 					</div>
@@ -124,7 +124,7 @@
 			</div>
 		</div>
 	</section>
-	<footer>
+	<footer id="contact-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-5">
@@ -138,7 +138,7 @@
 						Silom, 28th Floor
 					</p>
 				</div>
-				<div class="col-md-1 offset-md-1 info-devider">
+				<div class="col-md-1 offset-md-1 info-divider">
 
 				</div>
 				<div class="col-md-5">
