changed footer to 3 sections and works for mobile

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 	</section>
 	<footer id="contact-section">
 		<div class="container">
-			<div class="row">
-				<div class="col-md-5">
+			<div class="row contact-space">
+				<div class="col-md-3">
 					<h3 class="footer-title">Address</h3>
 					<p class="footer-info">
 						Bangkok, Thailand
@@ -138,10 +138,23 @@
 						Silom, 28th Floor
 					</p>
 				</div>
-				<div class="col-md-1 offset-md-1 info-divider">
-
+                <div class="col-md-1 info-l-divider">
+                </div>
+				<div class="col-md-4">
+					<h3 class="footer-title">Opening Hours</h3>
+					<p class="footer-info">
+						OPEN from Tuesday to Sunday
+						</br>
+						Tuesday to Thursday from 5:30 pm to 10:30
+						</br>
+						Friday to Sunday from 5:30 pm to 12 am,
+						</br>
+						CLOSED on MONDAY
+					</p>
 				</div>
-				<div class="col-md-5">
+                <div class="col-md-1 info-r-divider">
+                </div>
+				<div class="col-md-3">
 					<h3 class="footer-title">Contact Us</h3>
 					<p class="footer-info">
 						<i class="fas fa-phone"></i> +66 (0) 84 759 2658
