adding menu items

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<div id="about-section">
 			<div id="about-image"></div>
 			<!-- A shortened style of Who, What, Where is located here -->
-			<div class="container">
+			<div class="about-container">
 				<div class="row about-block">
 					<div class="col-md-5 offset-md-1">
 						<h5 class="about-header">Who</h5>
@@ -124,6 +124,75 @@
 			</div>
 		</div>
 	</section>
+	<section id="menu-section">
+		<div class="menu-image-section">
+			<div id="menu-image"></div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 menu-title">
+						Menu
+					</div>
+				</div>
+			</div>
+	</section>
+	<section>
+		<div class="menu-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 menu-items-description">
+						<p>NUMBER ONE caramelized onion
+							crescenza / prelibato gorgonzola
+							bacon / arugula / thousand island
+						</p>
+                        <p>
+							NUMBER TWO roasted tomato / burrata
+							crispy prosciutto / pesto
+                        </p>
+                        <p>
+							NUMBER THREE mezzo secco jack
+							green chili / chipotle / avocado
+						</p>
+                        <p>	
+                            NUMBER FOUR yellowfin tuna
+							butter lettuce / crispy fried onions
+							spicy aioli
+						</p>
+                        <p>	
+                            NUMBER FIVE homemade brioche,ground sirloin
+							pastrami, emmi gruyere, fried onion rings
+							thousand island sauce
+						</p>
+                        <p>	
+                            THAI BURGER lab-moo / white cabbage
+							tomato / thai hot basil / chili
+						</p>
+                        <p>
+                        	BARBEQUE BURGER crispy bacon /
+							onion ring / cheddar / house-made BBQ
+                        </p>    
+					</div>
+					<div class="col-md-6">
+						<p>GRILLED THREE CHEESE - 300
+							gouda / cheddar / emmi gruyere
+							lettuce / onion / tomato
+							GRILLED VEGGIE - 220
+							mushroom / arugula / roasted tomato
+							caramelized onions
+							HOT DOG - 280
+							relish / sauerkraut
+							SONORAN HOT DOG - 330
+							bacon wrapped / american cheese
+							tomato / pinto beans / onion
+							hatch green chili / caramelized onion
+							mustard / garlic aioli
+							25 DEGREES FRIED EGG SANDWICH - 330
+							canadian bacon / cheddar cheese
+							lettuce / tomato / herb aioli</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<footer id="contact-section">
 		<div class="container">
 			<div class="row contact-space">
@@ -138,8 +207,8 @@
 						Silom, 28th Floor
 					</p>
 				</div>
-                <div class="col-md-1 info-l-divider">
-                </div>
+				<div class="col-md-1 info-l-divider">
+				</div>
 				<div class="col-md-4">
 					<h3 class="footer-title">Opening Hours</h3>
 					<p class="footer-info">
@@ -152,14 +221,14 @@
 						CLOSED on MONDAY
 					</p>
 				</div>
-                <div class="col-md-1 info-r-divider">
-                </div>
+				<div class="col-md-1 info-r-divider">
+				</div>
 				<div class="col-md-3">
 					<h3 class="footer-title">Contact Us</h3>
 					<p class="footer-info">
 						<i class="fas fa-phone"></i> +66 (0) 84 759 2658
 						</br>
-						<i class="fas fa-envelope"></i> Contact@indiburger.co.th
+						<i class="fas fa-envelope"></i>Contact@indiburger.co.th
 					</p>
 				</div>
 			</div>
