--- a/index.html
+++ b/index.html
@@ -140,54 +140,91 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 menu-items-description">
-						<p>NUMBER ONE caramelized onion
+						<h3>Our Burgers</h3>
+						<p> <strong class="burger-type">NUMBER ONE</strong> - 330
+							</br>
+							caramelized onion
 							crescenza / prelibato gorgonzola
 							bacon / arugula / thousand island
 						</p>
-                        <p>
-							NUMBER TWO roasted tomato / burrata
+						<p>
+							<strong class="burger-type">NUMBER TWO</strong> - 330
+							</br>
+							tomato / burrata
 							crispy prosciutto / pesto
-                        </p>
-                        <p>
-							NUMBER THREE mezzo secco jack
+						</p>
+						<p>
+							<strong class="burger-type">NUMBER THREE</strong> - 330
+							</br>
+							mezzo secco jack
 							green chili / chipotle / avocado
 						</p>
-                        <p>	
-                            NUMBER FOUR yellowfin tuna
+						<p>
+							<strong class="burger-type">NUMBER FOUR</strong> - 330
+							</br>
+							yellowfin tuna
 							butter lettuce / crispy fried onions
 							spicy aioli
 						</p>
-                        <p>	
-                            NUMBER FIVE homemade brioche,ground sirloin
+						<p>
+							<strong class="burger-type">NUMBER FIVE</strong> - 330
+							</br>
+							homemade brioche,ground sirloin
 							pastrami, emmi gruyere, fried onion rings
 							thousand island sauce
 						</p>
-                        <p>	
-                            THAI BURGER lab-moo / white cabbage
+						<p>
+							<strong class="burger-type">THAI BURGER</strong> - 350
+							</br>
+							lab-moo / white cabbage
 							tomato / thai hot basil / chili
 						</p>
-                        <p>
-                        	BARBEQUE BURGER crispy bacon /
+						<p>
+							<strong class="burger-type">BARBEQUE BURGER</strong> - 300
+							</br>
+							crispy bacon /
 							onion ring / cheddar / house-made BBQ
-                        </p>    
+						</p>
 					</div>
-					<div class="col-md-6">
-						<p>GRILLED THREE CHEESE - 300
-							gouda / cheddar / emmi gruyere
-							lettuce / onion / tomato
-							GRILLED VEGGIE - 220
-							mushroom / arugula / roasted tomato
-							caramelized onions
-							HOT DOG - 280
-							relish / sauerkraut
-							SONORAN HOT DOG - 330
-							bacon wrapped / american cheese
-							tomato / pinto beans / onion
-							hatch green chili / caramelized onion
-							mustard / garlic aioli
-							25 DEGREES FRIED EGG SANDWICH - 330
-							canadian bacon / cheddar cheese
-							lettuce / tomato / herb aioli</p>
+					<div class="col-md-6 menu-items-description">
+						<h3>Salads</h3>
+						<p>
+							<strong class="burger-type">25 DEGREES SALAD</strong> - 330
+							<br>
+							heart of romaine lettuce / avocado
+							parmesano reggiano / fried capers
+							grilled turkey / cheddar
+						</p>
+						<p>
+							<strong class="burger-type">SPINACH SALAD</strong> - 250
+							</br>
+							baby spinach / bacon / red onion / walnuts
+							red cabbage pickle / bacon vinaigrette / soft boiled egg
+						</p>
+                        <p>
+							<strong class="burger-type">CHOPPED VEGETABLE</strong> - full 310 / half 180
+							</br>
+							avocado / grapes / tomatoes
+							beetroots / pine nuts / white beans
+							ranch / parmesano reggiano
+						</p>
+						<p>
+							<strong class="burger-type">TRADITIONAL CAESAR</strong> - full 310 / half 180
+							</br>
+							heart of romaine lettuce
+							parmesano reggiano / fried capers
+						</p>
+						<p>
+							<strong class="burger-type">ROASTED BEETS</strong> - full 310 / half 180
+							</br>
+							beetroots / baby arugula / feta / citrus vinaigrette
+						</p>
+						<p>
+							<strong class="burger-type">HEIRLOOM TOMATO</strong> - full 310 / half 180
+							</br>
+							watermelon / tomato / fromage blanc
+							tomato vinaigrette
+						</p>
 					</div>
 				</div>
 			</div>
