--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </button>
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<div class="navbar-nav ml-auto">
-				<a class="nav-item nav-link" href="#r">Menu</a>
+				<a class="nav-item nav-link" href="#menu-section">Menu</a>
 				<a class="nav-item nav-link" href="#contact-section">Contact</a>
 				<a class="nav-item nav-link" href="#reservation-section">Reservation</a>
 			</div>
@@ -47,7 +47,7 @@
 						<h5 class="best-place">“Best place in Town!”</h5>
 						<p class="review-text">The burgers and the view of the city are unmatchable anywhere else!<p>
 								<!-- link for this button still needs to be added -->
-								<button type="button" class="btn btn-outline-warning">Book a Table</button>
+								<a role="button" type="button" class="btn btn-outline-warning" href="#reservation-section">Book a Table</a>
 					</div>
 				</div>
 				<!-- Arrow is used to let the users know theres more to see -->
