--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                 </div>
 										<div class="form-group">
 											<label for="date">Date for Reservation</label>
-											<input type="text" class="form-control" placeholder="dd/mm/yyyy" id="date">
+											<input type="text" class="form-control" placeholder="dd/mm/yyyy" id="date" required>
                                     </div>
 											<button type="submit" class="btn btn-outline">Reserve a Table</button>
 						</form>
