--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 						<h5 class="best-place">“Best place in Town!”</h5>
 						<p class="review-text">The burgers and the view of the city are unmatchable anywhere else!<p>
 								<!-- link for this button still needs to be added -->
-								<a role="button" type="button" class="btn btn-outline-warning" href="#reservation-section">Book a Table</a>
+								<a role="button" type="button" class="btn btn-outline-warning"
+									href="#reservation-section">Book a Table</a>
 					</div>
 				</div>
 				<!-- Arrow is used to let the users know theres more to see -->
@@ -103,14 +104,14 @@
 						<form>
 							<div class="form-group">
 								<label for="booking-name">Name</label>
-								<input type="text" class="form-control" id="booking-name" placeholder="Name" aria-describedby="emailHelp" required>
+								<input type="text" class="form-control" id="booking-name" placeholder="Name" required>
 							</div>
 								<div class="form-group">
 									<label for="email">Email Address</label>
 									<input type="email" class="form-control" placeholder="Email" id="email">
                                 </div>
 									<div class="form-group">
-										<label for="">Phone Number</label>
+										<label for="phone">Phone Number</label>
 										<input type="text" class="form-control" placeholder="Phone" id="phone" required>
                                 </div>
 										<div class="form-group">
@@ -195,36 +196,37 @@
 							parmesano reggiano / fried capers
 							grilled turkey / cheddar
 						</p>
-						<p>
-							<strong class="burger-type">SPINACH SALAD</strong> - 250
-							</br>
-							baby spinach / bacon / red onion / walnuts
-							red cabbage pickle / bacon vinaigrette / soft boiled egg
-						</p>
-                        <p>
-							<strong class="burger-type">CHOPPED VEGETABLE</strong> - full 310 / half 180
-							</br>
-							avocado / grapes / tomatoes
-							beetroots / pine nuts / white beans
-							ranch / parmesano reggiano
-						</p>
-						<p>
-							<strong class="burger-type">TRADITIONAL CAESAR</strong> - full 310 / half 180
-							</br>
-							heart of romaine lettuce
-							parmesano reggiano / fried capers
-						</p>
-						<p>
-							<strong class="burger-type">ROASTED BEETS</strong> - full 310 / half 180
-							</br>
-							beetroots / baby arugula / feta / citrus vinaigrette
-						</p>
-						<p>
-							<strong class="burger-type">HEIRLOOM TOMATO</strong> - full 310 / half 180
-							</br>
-							watermelon / tomato / fromage blanc
-							tomato vinaigrette
-						</p>
+							<p>
+								<strong class="burger-type">SPINACH SALAD</strong> - 250
+								</br>
+								baby spinach / bacon / red onion / walnuts
+								red cabbage pickle / bacon vinaigrette / soft boiled egg
+							</p>
+							<p>
+								<strong class="burger-type">CHOPPED VEGETABLE</strong> - full 310 / half 180
+								</br>
+								avocado / grapes / tomatoes
+								beetroots / pine nuts / white beans
+								ranch / parmesano reggiano
+							</p>
+							<p>
+								<strong class="burger-type">TRADITIONAL CAESAR</strong> - full 310 / half 180
+								</br>
+								heart of romaine lettuce
+								parmesano reggiano / fried capers
+							</p>
+							<p>
+								<strong class="burger-type">ROASTED BEETS</strong> - full 310 / half 180
+								</br>
+								beetroots / baby arugula / feta / citrus vinaigrette
+							</p>
+							<p>
+								<strong class="burger-type">HEIRLOOM TOMATO</strong> - full 310 / half 180
+								</br>
+								watermelon / tomato / fromage blanc
+								tomato vinaigrette
+							</p>
+
 					</div>
 				</div>
 			</div>
@@ -265,13 +267,12 @@
 					<p class="footer-info">
 						<i class="fas fa-phone"></i> +66 (0) 84 759 2658
 						</br>
-						<i class="fas fa-envelope"></i>Contact@indiburger.co.th
+						<i class="fas fa-envelope"></i> Contact@indiburger.co.th
 					</p>
 				</div>
 			</div>
 		</div>
 	</footer>
 </body>
-
 
 </html>
