menu image fix/href phone number and email

--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-	</script>
 </head>
 
 <body>
@@ -64,7 +55,7 @@
 		<div id="about-section">
 			<div id="about-image"></div>
 			<!-- A shortened style of Who, What, Where is located here -->
-			<div class="about-container">
+			<div class="about-container container">
 				<div class="row about-block">
 					<div class="col-md-5 offset-md-1">
 						<h5 class="about-header">Who</h5>
@@ -94,6 +85,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 	</section>
 	<section id="reservation-section">
 		<div class="reservation-section">
@@ -121,7 +113,7 @@
 											<button type="submit" class="btn btn-outline">Reserve a Table</button>
 						</form>
 					</div>
-				</div>s
+				</div>
 			</div>
 		</div>
 	</section>
@@ -135,6 +127,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 	</section>
 	<section>
 		<div class="menu-section">
@@ -265,14 +258,25 @@
 				<div class="col-md-3">
 					<h3 class="footer-title">Contact Us</h3>
 					<p class="footer-info">
-						<i class="fas fa-phone"></i> +66 (0) 84 759 2658
+						<i class="fas fa-phone"></i> <a href="tel:+66 (0) 84 759 2658"
+							class="footer-info">+66(0)847592658</a>
 						</br>
-						<i class="fas fa-envelope"></i> Contact@indiburger.co.th
+						<i class="fas fa-envelope"></i> <a href="mailto:Contact@indiburger.co.th"
+							class="footer-info">Email Us!</a>
 					</p>
 				</div>
 			</div>
 		</div>
 	</footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+</script>
 
 </html>
